Update with new Java 21 String formatting